--- a/config.env
+++ b/config.env
@@ -1,8 +1,9 @@
 CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/projects-nexus/nexus_kernel_xiaomi_sm8250
-KERNEL_SOURCE_BRANCH=stable
-KERNEL_CONFIG=thyme_defconfig
+KERNEL_SOURCE_BRANCH=rebase-sched-9
+KERNEL_CONFIG=vendor/xiaomi/sm8250-common.config
+
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
