--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/projects-nexus/nexus_kernel_xiaomi_sm8250
-KERNEL_SOURCE_BRANCH=stable
-KERNEL_CONFIG=alioth_defconfig
+KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_thyme
+KERNEL_SOURCE_BRANCH=14.0
+KERNEL_CONFIG=thyme_defconfig
 
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
@@ -35,7 +35,7 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
@@ -50,7 +50,7 @@ REMOVE_UNUSED_PACKAGES=true
 
 # AnyKernel3
 ## AnyKernel3 Custom
-USE_CUSTOM_ANYKERNEL3=false
+USE_CUSTOM_ANYKERNEL3=true
 CUSTOM_ANYKERNEL3_SOURCE=
 CUSTOM_ANYKERNEL3_BRANCH=
 
