--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_thyme
-KERNEL_SOURCE_BRANCH=14.0
+KERNEL_SOURCE=https://github.com/xiliahz/cherish_kernel_xiaomi_thyme
+KERNEL_SOURCE_BRANCH=arrow-13.0
 KERNEL_CONFIG=thyme_defconfig
 
 KERNEL_IMAGE_NAME=Image.gz-dtb
@@ -19,8 +19,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=android14-release
-CLANG_VERSION=r487747c
+CLANG_BRANCH=android13-release
+CLANG_VERSION=r450784d
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -61,5 +61,5 @@ ENABLE_CCACHE=true
 NEED_DTBO=false
 
 # Build boot images
-BUILD_BOOT_IMG=true
+BUILD_BOOT_IMG=false
 SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
