--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/xiliahz/cherish_kernel_xiaomi_thyme
+KERNEL_SOURCE_BRANCH=arrow-13.0
+KERNEL_CONFIG=thyme_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
