--- a/config.env
+++ b/config.env
@@ -10,9 +10,9 @@ EXTRA_CMDS:LD=ld.lld
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
+USE_CUSTOM_CLANG=true
 CUSTOM_CLANG_SOURCE=
-CUSTOM_CLANG_BRANCH=
+CUSTOM_CLANG_BRANCH=clang-r475365b 
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
