--- a/config.env
+++ b/config.env
@@ -9,17 +9,19 @@ ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
 # Clang
+LLVM_VERSION=17.06
+ELECTRON_BINUTILS_VERSION=2.41
 ## Custom
-USE_CUSTOM_CLANG=true
-CUSTOM_CLANG_SOURCE=
-CUSTOM_CLANG_BRANCH=clang-r475365b 
+#USE_CUSTOM_CLANG=true
+#CUSTOM_CLANG_SOURCE=
+#CUSTOM_CLANG_BRANCH=clang-r475365b 
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=android13-release
-CLANG_VERSION=r450784d
+#CLANG_BRANCH=android13-release
+#CLANG_VERSION=r450784d
 
 # GCC
 ENABLE_GCC_ARM64=true
