--- a/config.env
+++ b/config.env
@@ -12,16 +12,16 @@ EXTRA_CMDS:LD=ld.lld
 LLVM_VERSION=17.06
 ELECTRON_BINUTILS_VERSION=2.41
 ## Custom
-#USE_CUSTOM_CLANG=true
-#CUSTOM_CLANG_SOURCE=
-#CUSTOM_CLANG_BRANCH=clang-r475365b 
+USE_CUSTOM_CLANG=false
+CUSTOM_CLANG_SOURCE=
+CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-#CLANG_BRANCH=android13-release
-#CLANG_VERSION=r450784d
+#CLANG_BRANCH=main
+#CLANG_VERSION=r475365b
 
 # GCC
 ENABLE_GCC_ARM64=true
