--- a/config.env
+++ b/config.env
@@ -9,8 +9,6 @@ ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
 
 # Clang
-LLVM_VERSION=17.06
-ELECTRON_BINUTILS_VERSION=2.41
 ## Custom
 USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=
@@ -20,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-#CLANG_BRANCH=main
-#CLANG_VERSION=r475365b
+#CLANG_BRANCH=android11-release
+#CLANG_VERSION=clang-r383902b
 
 # GCC
 ENABLE_GCC_ARM64=true
