--- a/config.env
+++ b/config.env
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-#CLANG_BRANCH=android11-release
-#CLANG_VERSION=clang-r383902b
+CLANG_BRANCH=android11-release
+CLANG_VERSION=clang-r383902b
 
 # GCC
 ENABLE_GCC_ARM64=true
