--- a/config.env
+++ b/config.env
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=clang-r383902b
+CLANG_BRANCH=clang-r450784e
+CLANG_VERSION=r475365b
 
 # GCC
 ENABLE_GCC_ARM64=true
