--- a/config.env
+++ b/config.env
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=clang-r450784e
-CLANG_VERSION=r475365b
+CLANG_BRANCH=clang-r450784d
+CLANG_VERSION=r450784d
 
 # GCC
 ENABLE_GCC_ARM64=true
