--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_thyme
-KERNEL_SOURCE_BRANCH=14.0
+KERNEL_SOURCE=https://github.com/xiliahz/cherish_kernel_xiaomi_thyme
+KERNEL_SOURCE_BRANCH=arrow-13.0
 KERNEL_CONFIG=thyme_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
