--- a/config.env
+++ b/config.env
@@ -24,11 +24,11 @@ CLANG_VERSION=r487747c
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
-USE_CUSTOM_GCC_64=false
+USE_CUSTOM_GCC_64=true
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
 CUSTOM_GCC_64_BIN=aarch64-linux-android-
-USE_CUSTOM_GCC_32=false
+USE_CUSTOM_GCC_32=true
 CUSTOM_GCC_32_SOURCE=
 CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
