--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/UtsavBalar1231/kernel_xiaomi_sm8250
-KERNEL_SOURCE_BRANCH=android14
+KERNEL_SOURCE=https://github.com/crdroidandroid/android_kernel_xiaomi_thyme
+KERNEL_SOURCE_BRANCH=14.0
 KERNEL_CONFIG=thyme_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
@@ -18,17 +18,17 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r487747c
+CLANG_BRANCH=android14-release
+CLANG_VERSION=clang-r487747c
 
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
-USE_CUSTOM_GCC_64=true
+USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
 CUSTOM_GCC_64_BIN=aarch64-linux-android-
-USE_CUSTOM_GCC_32=true
+USE_CUSTOM_GCC_32=false
 CUSTOM_GCC_32_SOURCE=
 CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
@@ -41,9 +41,9 @@ KSU_EXPECTED_HASH=
 
 # Configuration
 DISABLE-LTO=false
-DISABLE_CC_WERROR=false
-ADD_KPROBES_CONFIG=false
-ADD_OVERLAYFS_CONFIG=false
+DISABLE_CC_WERROR=true
+ADD_KPROBES_CONFIG=true
+ADD_OVERLAYFS_CONFIG=true
 APPLY_KSU_PATCH=false
 REMOVE_UNUSED_PACKAGES=true
 
